# tagalog-stemmer

./: README.md  pyproject.toml  requirements.txt
src/tglstemmer/: __init__.py  stem.py  stemmer.py
src/tglstemmer/helpers/: affixes.py  alphabet.py  manipulation.py  validation.py  words.py
src/tglstemmer/resources/: tgl_wordlist.txt
src/tglstemmer/resources/affixes/: infixes_notes.md  prefixes.txt  prefixes_notes.md  suffixes.txt  suffixes_notes.md
tests/: test_stemmer_functions.py  test_stemmer_helpers.py
tests/accuracy/: correct.csv  examples.csv  incorrect.csv  results.csv  test_stemmer_accuracy.py
