[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tglstemmer"
dynamic = ["version"]
description = "A library for Tagalog word stemming."
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Andrian Lloyd Maagma", email = "maagmaandrian@gmail.com"}
]
keywords = ["stemmer", "tagalog", "affix removal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "nltk>=3.8.1",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = ["twine>=5.1.1"]
test = ["pytest>=8.3.2", "mypy>=1.11.0"]

[project.urls]
homepage = "https://github.com/andrianllmm/tglstemmer"
issues = "https://github.com/andrianllmm/tglstemmer/issues"

[tool.setuptools]
package-data = {"tglstemmer" = ["resources/*.txt", "resources/affixes/*.txt"]}

[tool.setuptools.dynamic]
version = {attr = "tglstemmer.__version__"}
